--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
         canvas {
             border: 2px solid white;
-            background-color: black;
+            background-color: blue;
         }
         #startMessage {
             position: absolute;
