--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <div id="all">
     <div id="navbar">
 
 
@@ -45,6 +46,7 @@
         </div>
 
     </div>
+    aaaa</div>
 </body>
 
 </html>
