--- a/project.html
+++ b/project.html
@@ -1,1 +1,6 @@
-<!DOCTYPE html> <a href="./index.html"> one piece is the best anime</a>
+<!DOCTYPE html> 
+
+<div id="otherweb">
+<a href="./index.html"> one piece is the best anime</a>
+
+</div>
