--- a/project.html
+++ b/project.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> 
 
 <div id="otherweb">
-<a href="./index.html"> one piece is the best anime</a>
+<a href="./index.html"> home</a>
 
 </div>
