--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     </title>
     <link rel="stylesheet" href="index.css">
-
+<link rel="icon" type="image/x-icon" href="ChatGPT Image Dec 28, 2025, 05_54_36 PM.png">
 </head>
 
 <body>
@@ -53,7 +53,8 @@
 
         </div>
         <div id="right-col">
-            avichai
+            hi my name is my name is chiki chiki slim shady
+            im coding this website from scratch sort of
         </div>
 
     </div>
