--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
 
             </div>
             <div id="right-col">
-                hi my name is my name is chiki chiki slim shady
-                im coding this website from scratch sort of
+                hi my name is avicahi
             </div>
 
         </div>
